--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "fs": "^0.0.1-security",
+    "pg-format": "^1.0.4"
   }
 }
