--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.11.3",
-    "fs": "^0.0.1-security",
-    "pg-format": "^1.0.4"
+    "fs": "^0.0.1-security"
   }
 }
