--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.11.3",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "express-openid-connect": "^2.5.0",
+    "express-session": "^1.17.3"
   }
 }
